[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "netbox-vcloud"
version = "0.2.8"
authors = [
    {name = "Serhii Zahuba", email = "dev@sss.com"},
]
description = "NetBox plugin for synchronizing vCloud VMs via ORM"
readme = "README.md"
requires-python = ">=3.10"

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python :: 3",
    "Framework :: Django",
    "Framework :: Django :: 5.2",
]

dependencies = ["requests>=2.31"]

[project.optional-dependencies]
test = ["pytest>=8.2"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["netbox_vcloud*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
